logs/makeapp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/makeapp'...
Listing './lib/python3.5/site-packages/makeapp/app_templates'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/__default__'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/__default__/__module_name__'...
Compiling './lib/python3.5/site-packages/makeapp/app_templates/__default__/__module_name__/__init__.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/__default__/__module_name__/__init__.py", line 1
    {% block imports %}{% endblock %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeapp/app_templates/__default__/docs'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/__default__/docs/build'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/__default__/docs/source'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/__default__/docs/source/_static'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/__default__/docs/source/_templates'...
Compiling './lib/python3.5/site-packages/makeapp/app_templates/__default__/docs/source/conf.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/__default__/docs/source/conf.py", line 19
    from {{ module_name }} import VERSION
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/makeapp/app_templates/__default__/setup.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/__default__/setup.py", line 4
    {% block imports %}{% endblock %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeapp/app_templates/__default__/tests'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/click'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/click/__module_name__'...
Compiling './lib/python3.5/site-packages/makeapp/app_templates/click/__module_name__/cli.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/click/__module_name__/cli.py", line 1
    {% extends "console/__module_name__/cli.py" %}
     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/makeapp/app_templates/click/setup.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/click/setup.py", line 1
    {% extends "console/setup.py" %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeapp/app_templates/console'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/console/__module_name__'...
Compiling './lib/python3.5/site-packages/makeapp/app_templates/console/__module_name__/cli.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/console/__module_name__/cli.py", line 3
    {% block imports %}
     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/makeapp/app_templates/console/setup.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/console/setup.py", line 1
    {% extends "__default__/setup.py" %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeapp/app_templates/django'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__'...
Compiling './lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__/config.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__/config.py", line 5
    class {{ module_name_capital }}Config(AppConfig):
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__/locale'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__/management'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__/management/commands'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__/templates'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__/templatetags'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/django/__module_name__/tests'...
Listing './lib/python3.5/site-packages/makeapp/app_templates/pytest'...
Compiling './lib/python3.5/site-packages/makeapp/app_templates/pytest/setup.py'...
***   File "./lib/python3.5/site-packages/makeapp/app_templates/pytest/setup.py", line 1
    {% extends "__default__/setup.py" %}
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeapp/app_templates/pytest/tests'...
Listing './lib/python3.5/site-packages/makeapp/helpers'...
Listing './lib/python3.5/site-packages/makeapp/license_templates'...
Listing './lib/python3.5/site-packages/makeapp-0.11.1.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
